# websocket_c

./: CMakeLists.txt  Makefile
cmake/: config.h.in
include/: generator.h  helper.h  read_data.h
src/: generator.h  helper.c  helper.h  main.c  mask.h  read_loop.h  types.h  websocket.c  websocket.h  websocket_struct.h
src/websocket/: config.h  generator.c  hook.h  read_data.h  ssl_ext.h  types.h  websocket.c  websocket.h  websocket_struct.h
tests/: main.c
